# fast_zero

./: .coverage  README.md  pyproject.toml  pyproject.toml.save
src/: .coverage
tests/: test_app.py
