[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "ademirluizpereira",email = "ademirluizpereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']
src = ["src"]

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']
ignore = ["W191"]

[tool.ruff.format]
line-ending = "lf"
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev src/fast_zero/app.py --host 0.0.0.0'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/fast_zero/ --verbose'
post_html = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
